--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   }
   
   body {
-    background-color: #e6ce55;
+    background-color: #1ad2ea;
     font-family: Helvetica, Arial, sans-serif;
   }
   
