--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,8 @@
   }
   
   body {
-    background-color: #1ad2ea;
+    background-color: #22042e;
     font-family: Helvetica, Arial, sans-serif;
-  }
-  
-  .cssBackgroundImg {
-    background-image: url(../img/wrench.png);
-    width: 400px;
-    height: 400px;
-    margin: 64px auto;
-  }
-  
-  .cssBackgroundImg:hover {
-    background-image: url(../img/clock.png);
-    cursor: crosshair;
   }
   
   .text {
