--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   }
   
   body {
-    background-color: #22042e;
+    background-color: #0075a0;
     font-family: Helvetica, Arial, sans-serif;
   }
   
